1.018
      2013-08-20
        * Final prep for release
        * RT #76570 - bugfix provided by onken@netcubed.de to fix encoding error or scalar ref templates.

1.017
      2012-02-10
        * Add necessary hooks to allow for COMPILE_JS (See Template::Alloy::JS)
        * Test suite cleanup
        * Add missing squote and dquote item vmethods
        * Fix bug in internal iterator

1.016
      2011-01-26
        * Add AUTO_FILTER configuration item to TT and HTE flavors.

1.015
      2010-12-29
        * Add missing Iterator features odd, even, parity
        * Add .xml vmethod/filter
        * Change .html method to not encode apostrophe - that is what .xml is for (thanks to Ashley Pond V)
        * Add STRICT and STRICT_THROW configuration items including code, tests, and documentation
        * Add tt_var_string method and document ast_string method.
        * Fix pod errors reported by Frank Wiegand in VMethod.pm
        * Update test suite to not test stringification of perl regex (thanks to ANDK@cpan)
        * Fix path of file cache names on MSWin32 (thanks to BEROV@cpan)
        * Fix EXPOSE_BLOCKS to follow TT 2.22 behavior
        * Add tests to cover block use from included/processed blocks

1.014
      2010-03-31
        * Fix localization issue in set

1.013
      2008-09-18
        * Make PLUGIN_BASE work like TT (always falls back to Template::Plugins)
        * Make case searching for PLUGINS work like TT (only those listed in PLUGINS or STD_PLUGINS apply.
        * Test all input and output methods (fix accompanying errors)
        * Fix local pos warning.
        * Fix Template::Alloy::Iterator to follow exact TT iterator behavior during new

1.012
      2008-04-10
        * Allow scalar refs passed as variables to be processed
        * Allow ADD_LOCAL_PATH to function in more areas (including INSERT)
        * Don't let ADD_LOCAL_PATH modify INCLUDE_PATHS
        * Let ADD_LOCAL_PATH be modified at runtime
        * Stream cleanup