@@ -1,7 +1,10 @@
 1.018
-      2013-08-20
-        * Final prep for release
+      2013-08-21
+        * Final prep for release (1.017 never saw cpan)
         * RT #76570 - bugfix provided by onken@netcubed.de to fix encoding error or scalar ref templates.
+        * RT #79641 - copy buggy behavior of Template::Toolkit in that we now allow for [% # comment %] all on one line (we previously supported [%# comment %])
+        * Add real json methods
+        * Fix warning when calling .html on undefined
 
 1.017
       2012-02-10
